[package]
name = "wasmadeus"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Lefebvre"]
categories = ["wasm", "web-programming"]
description = "An experimental frontend framework in pure rust"
keywords = ["framework", "frontend", "frp", "wasm"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/L-Benjamin/wasmadeus"

[features]
default = ["logger"]
logger = ["dep:log", "web-sys/console"]
nightly = []

[dependencies.log]
version = "0.4.20"
default-features = false
optional = true

[dependencies.web-sys]
version = "0.3.66"
default-features = false
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
]
